@@ -24,6 +24,7 @@ cupt (1.0.0~beta2~) UNRELEASED; urgency=low
       - Three above accidentally (Closes: #547951).
       - Report unknown option names in original case. Thanks to Robert Millan.
         (Closes: #548314)
+      - New option family 'cupt::update::compression-types::*::priority'.
       - ISCConfigParser:
         - Parse \" as " in values. Thanks to Julian Andres Klode.
         - Fixed parsing non-first nested structures. Thanks to
@@ -58,6 +59,8 @@ cupt (1.0.0~beta2~) UNRELEASED; urgency=low
           'cupt::update::keep-bad-signatures' is set to false, some release
           signature failed gpg check, and more than one index file is attached
           to corresponding Release.
+        - 'update_release_and_index_data': honor new
+          'cupt::update::compression-types::*::priority' options.
       - Resolvers/Native:
         - Print debug information when some solution path cannot be taken
           because of 'cupt::resolver::synchronize-source-versions' option set
